--- a/EVIDENCIA_4/app/Final.ipynb
+++ b/EVIDENCIA_4/app/Final.ipynb
@@ -7,8 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LIBRERÍAS A USAR\n",
+    "#PI-THON'S\n",
+    "# DASHBOARD PARA LOGÍSTICA DEL MAYAB\n",
+    "# AUTORES : IKER VILLALOBOS, JUANC CARLOS CÁRCAMO, JOSÉ DAVID CASTILLO Y ANA ISABEL GARCÍA\n",
+    "# LINK DE PRESENTACION : https://www.canva.com/design/DAG6eULcP2Q/_UzpQETJNqceFTnYF44EUg/edit?utm_content=DAG6eULcP2Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton\n",
     "\n",
+    "\n",
+    "# LIBRERÍAS A USAR\n",
     "# Dash es el framework principal utilizado para poder crear el dashboard web interactivo con Python.\n",
     "import dash\n",
     "\n",
